objects/ssot__LoyaltyBenefit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitActionId__c</fullName>
        <label>Benefit Action</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitStatusId__c</fullName>
        <label>Benefit Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Benefit Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsBenefitSelectionAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Selection Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoayaltyBenefitPriorityNumber__c</fullName>
        <label>Loayalty Benefit Priority Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyBenefitTypeId__c</fullName>
        <label>Loyalty Benefit Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyBenefitUOM__c</fullName>
        <label>Loyalty Benefit UOM</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyBenefitValueText__c</fullName>
        <label>Loyalty Benefit Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761154388_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitAction_Id_map_LoyaltyBenefit__rel</label>
        <referenceTo>ssot__BenefitAction__dlm</referenceTo>
        <relationshipLabel>BenefitAction_Id_map_LoyaltyBenefit__rel</relationshipLabel>
        <relationshipName>rel_1697761154388_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761179023_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyBenefitType_Id_map_LoyaltyBen_rel</label>
        <referenceTo>ssot__LoyaltyBenefitType__dlm</referenceTo>
        <relationshipLabel>LoyaltyBenefitType_Id_map_LoyaltyBen_rel</relationshipLabel>
        <relationshipName>rel_1697761179023_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761179189_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyBenefit_BenefitActionId_map_B_rel</label>
        <referenceTo>ssot__BenefitAction__dlm</referenceTo>
        <relationshipLabel>LoyaltyBenefit_BenefitActionId_map_B_rel</relationshipLabel>
        <relationshipName>rel_1697761179189_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>